--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+<img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Lion"
+      title="Ni nani kama simba!"
+/>
   </body>
 </html>
